--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     },
     "dependencies": {
         "axios": "^1.1.3",
-        "sailpoint-api-client": "file:../typescript-sdk/sdk-output"
+        "sailpoint-api-client": "file:../typescript-sdk/sdk-output",
+        "json-2-csv": "^3.18.0"
     }
 }
