--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     },
     "dependencies": {
         "axios": "^1.1.3",
-        "sailpoint-api-client": "file:../typescript-sdk/sdk-output",
+        "sailpoint-api-client": "1.0.2",
         "json-2-csv": "^3.18.0"
     }
 }
